--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <input
             type="search"
             placeholder="Search anything"
+            name="q"
+            value=""
+            autocomplete="on"
             name="searchbar"
             id="search"
           />
@@ -127,6 +130,7 @@
       </div>
 
       <div class="nft-art">
+
         <div class="collection">
           <div class="nft-img">
             <img src="images/nft-2.jpg" />
@@ -207,6 +211,8 @@
             </div>
           </div>
         </div>
+
+
 
         <div class="collection">
           <div class="nft-img"><img src="images/nft-5.jpg" /></div>
