details for webpage including hover effects

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
           <div class="numb-el">
             <ul>
               <li class="bd-rt-1">
-                21M+ <br>
+                21M+ <br />
                 Reviews
               </li>
               <li class="bd-rt-2">
-                1B+ <br>
+                1B+ <br />
                 Downloads
               </li>
               <li class="bd-rt-3">
-                20M+ <br>
+                20M+ <br />
                 Followers
               </li>
             </ul>
@@ -130,7 +130,6 @@
       </div>
 
       <div class="nft-art">
-
         <div class="collection">
           <div class="nft-img">
             <img src="images/nft-2.jpg" />
@@ -212,8 +211,6 @@
           </div>
         </div>
 
-
-
         <div class="collection">
           <div class="nft-img"><img src="images/nft-5.jpg" /></div>
 
@@ -291,9 +288,39 @@
             <button type="button" class="buy-now">Buy now</button>
 
             <div>
-             <iconify-icon icon="clarity:history-line"></iconify-icon>
+              <iconify-icon icon="clarity:history-line"></iconify-icon>
               <h4 class="view-history">View history</h4>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="see-all-btn">
+        <button class="btn-primary">See all</button>
+      </div>
+
+      <div class="intro-sect">
+        <div>
+          <h1>Get more beautiful art work here</h1>
+
+          <p class="pg-par">
+            Get more beautiful art work here Get more beautiful art work here
+            Get more beautiful art work here Get more beautiful art work here
+            Get more beautiful art work here
+          </p>
+        </div>
+
+        <div class="get-row">
+          <div class="item1">
+            <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
+          </div>
+          <div class="item2">
+            <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
+          </div>
+          <div class="item3">
+            <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
+          </div>
+          <div class="item4">
+            <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
           </div>
         </div>
       </div>
