played around flex and positioning

--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
         <button class="btn-primary">See all</button>
       </div>
 
-      <div class="intro-sect">
-        <div>
+      <div class="outro-sect">
+        <div class="outro">
           <h1>Get more beautiful art work here</h1>
 
           <p class="pg-par">
@@ -311,16 +311,21 @@
 
         <div class="get-row">
           <div class="item1">
-            <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
+            <img class="grid-disp" src="images/nft-painting.jpg" alt="nft" />
+
+            <img class="grid-disp" src="images/nft-painting-4.jpg" alt="nft" />
           </div>
+
+
           <div class="item2">
             <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
+         
+            <img class="grid-disp" src="images/nft-painting-3.jpg" alt="nft" />
           </div>
-          <div class="item3">
-            <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
-          </div>
+
+
           <div class="item4">
-            <img class="grid-disp" src="images/nft-painting-2.jpg" alt="nft" />
+            
           </div>
         </div>
       </div>
